# house_inventory

./: .gitignore  Dockerfile  MANIFEST.in  README.md  custom_settings.py.sample  docker-compose.yml  docker_entrypoint.sh  manage.py  setup.cfg  setup.py
.github/workflows/: main.yml
house_inventory/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: __init__.py  actions.py  admin.py  apps.py  list_filters.py  models.py
inventory/migrations/: 0001_initial.py
locale/it/LC_MESSAGES/: django.mo  django.po
templates/: change_category.html  create_sections.html  create_shelves.html  move_to_other_location.html
