[metadata]
name = house_inventory
version = 0.1
description = House Inventory Django Site
url = https://depau.eu
author = Davide Depau
author_email = davide@depau.eu
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    django>=3.2,<4.0
    django-treenode>=0.17,<1.0
    whitenoise>=5.3,<6.0

[options.extras_require]
server = gunicorn